--- a/axelor-human-resource/src/main/resources/views/ProjectConfig.xml
+++ b/axelor-human-resource/src/main/resources/views/ProjectConfig.xml
@@ -13,8 +13,8 @@
             onChange="action-project-config-method-generate-default-planned-time-value"/>
           <field name="isSelectionOnDisplayPlannedTime" widget="boolean-switch" colSpan="4"
             onChange="action-project-config-method-generate-default-planned-time-value"/>
-          <field name="plannedTimeValueList" showIf="isSelectionOnDisplayPlannedTime"
-            widget="TagSelect" x-order="plannedTime" colSpan="4"/>
+          <panel-related field="plannedTimeValueList" colSpan="12" canSelect="true"
+            showIf="isSelectionOnDisplayPlannedTime" orderBy="plannedTime"/>
         </panel>
       </insert>
     </extend>
