--- a/axelor-human-resource/src/main/resources/views/Timesheet.xml
+++ b/axelor-human-resource/src/main/resources/views/Timesheet.xml
@@ -284,6 +284,7 @@
     <action name="action-timesheet-attrs-panels"/>
     <action name="action-timesheet-attrs-refresh-editor"/>
     <action name="action-timesheet-method-timesheet-compute-period-total"/>
+    <action name="action-timesheet-attrs-readonly-todate"/>
   </action-group>
 
   <action-attrs name="action-hr-timesheet-attrs-domain-product">
@@ -496,6 +497,11 @@
       expr="eval: __repo__(Timesheet).all().filter('self.employee.user.id = ?1 AND self.statusSelect != ?2 ORDER BY self.toDate DESC', __user__.id, TimesheetRepository.STATUS_CANCELED).fetchOne() != null"/>
   </action-attrs>
 
+  <action-attrs name="action-timesheet-attrs-readonly-todate">
+    <attribute name="readonly" for="toDate" if="toDate != null"
+      expr="eval: __repo__(Timesheet).all().filter('self.employee.user.id = ?1 AND self.statusSelect != ?2 AND self.fromDate = ?3', __user__.id, TimesheetRepository.STATUS_CANCELED, toDate + 1).fetchOne() != null"/>
+  </action-attrs>
+
   <action-attrs name="action-timesheet-attrs-from-date">
     <attribute name="readonly" for="fromDate" expr="eval: fromDate != null"/>
   </action-attrs>
@@ -524,7 +530,7 @@
   <action-record name="action-timesheet-record-from-period-date"
     model="com.axelor.apps.hr.db.Timesheet">
     <field name="fromDate"
-      expr="eval: __repo__(Timesheet).all().filter('self.employee.user.id = ?1 AND self.statusSelect != ?2 ORDER BY self.toDate DESC', __user__.id, TimesheetRepository.STATUS_CANCELED).fetchOne()?.toDate?.plusDays(1)"/>
+      expr="eval: __repo__(Timesheet).all().filter('self.employee.user.id = ?1 AND self.statusSelect != ?2 AND self.toDate IS NOT NULL ORDER BY self.toDate DESC', __user__.id, TimesheetRepository.STATUS_CANCELED).fetchOne()?.toDate?.plusDays(1)"/>
   </action-record>
 
   <action-record name="action-timesheet-null-fromDate"
