--- a/axelor-stock/src/main/resources/views/MassStockMove.xml
+++ b/axelor-stock/src/main/resources/views/MassStockMove.xml
@@ -7,6 +7,10 @@
     model="com.axelor.apps.stock.db.MassStockMove" onNew="action-mass-stock-move-method-on-new">
     <field name="company" onChange="action-mass-stock-move-record-company-on-change"/>
     <field name="cartStockLocation" domain="self.company = :company AND self.typeSelect != 3"/>
+    <field name="commonFromStockLocation"
+      omain="self.company = :company AND self.typeSelect != 3"/>
+    <field name="commonToStockLocation"
+      omain="self.company = :company AND self.typeSelect != 3"/>
   </grid>
 
   <form title="Mass stock move" name="mass-stock-move-form"
@@ -15,6 +19,14 @@
       <field name="company" onChange="action-mass-stock-move-record-company-on-change"/>
       <field name="cartStockLocation"
         domain="self.company = :company AND self.typeSelect != 3" readonlyIf="company == null"/>
+    </panel>
+    <panel name="productNeedPanel">
+      <field name="commonFromStockLocation"
+        domain="self.company = :company AND self.typeSelect != 3" readonlyIf="company == null"/>
+      <field name="commonToStockLocation"
+        domain="self.company = :company AND self.typeSelect != 3" readonlyIf="company == null"/>
+      <panel-related field="productToMoveList" grid-view="mass-stock-move-need-grid"
+        form-view="mass-stock-move-need-form" colSpan="12" canNew="company != null"/>
     </panel>
     <panel name="pickedProductPanel">
       <panel-related field="pickedProductList" grid-view="picked-product-grid"
