--- a/axelor-sale/src/main/resources/views/SaleOrderLine.xml
+++ b/axelor-sale/src/main/resources/views/SaleOrderLine.xml
@@ -16,6 +16,9 @@
       icon="fa-exclamation-triangle"/>
     <field name="sequence" if="__config__.app.getApp('sale')?.isDisplaySaleOrderLineNumber"
       width="51"/>
+    <button name="addToCartBtn" title="Add to cart"
+      onClick="action-sale-order-line-method-add-to-cart" icon="cart-plus-fill"
+      if="__config__.app.getApp('sale')?.getIsCartManagementEnabled()"/>
     <field name="typeSelect" hidden="true"/>
     <field name="deliveryState" hidden="true" if="__config__.app.isApp('supplychain')"/>
     <field name="product.code" width="120"/>
@@ -58,6 +61,9 @@
 
     <field name="sequence" if="__config__.app.getApp('sale')?.isDisplaySaleOrderLineNumber"
       width="51"/>
+    <button name="addToCartBtn" title="Add to cart"
+      onClick="action-sale-order-line-method-add-to-cart" icon="cart-plus-fill"
+      if="__config__.app.getApp('sale')?.getIsCartManagementEnabled()" readonlyIf="!product"/>
     <field name="typeSelect" onChange="action-sale-order-line-method-type-select-onchange"/>
     <field name="product" canEdit="false"
       onChange="action-sale-order-line-method-get-product-information"
@@ -721,5 +727,9 @@
     <action name="action-sale-order-line-validate-check-coefficient-config"/>
     <action name="action-sale-order-line-attrs-to-invoice"/>
   </action-group>
+
+  <action-method name="action-sale-order-line-method-add-to-cart">
+    <call class="com.axelor.apps.sale.web.SaleOrderLineController" method="addToCart"/>
+  </action-method>
 
 </object-views>
